--- a/cart.html
+++ b/cart.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- <link rel="stylesheet" href="css/estilo-principal.css"> -->
+    <link rel="stylesheet" href="css/estilo-principal.css">
     <link rel="stylesheet" href="css/carrito.css">
     <link rel="stylesheet" href="css/main-style.css">
 
@@ -32,9 +32,9 @@
 
                 <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent" width="100">
                     <div class="d-flex ms-auto mt-2" role="search">
-                        <input id="searchInput" class="form-control me-2" type="search" placeholder="Search"
+                        <input disabled id="searchInput" class="form-control me-2" type="search" placeholder="Search"
                             aria-label="Search">
-                        <button id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
+                        <button disabled id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
                             <img class="mb-1" src="./icons/Search.svg" alt="Search-icon" width="36" height="30">
                         </button>
                     </div>
@@ -72,7 +72,7 @@
                     <a class="nav-link active nav-animation" href="preguntas-frecuentes.html">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active nav-animation" href="acerca-de.html">About Us</a>
+                    <a class="nav-link active nav-animation" href="about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active nav-animation" href="contacto.html">Contact Us</a>
@@ -83,68 +83,71 @@
     </nav>
     <main>
         <div class="container-cart">
-            <h1 class="heading-1">Products</h1>
-            <div class="container" id="detail">
-                <!--Inicio 1er producto-->
-                <div class="container-product">
-                    <div class="row gx-0">
-                        <!-- Nombre del producto -->
-                        <div class="col-sm-4 col-md-3 col-6 mb-4" style="align-self: center;">
-                            <h2 class="heading-2">Product</h2>
-                            <div class="p-3 value">LEGO set</div>
+            <div id="carrito">
+                <h1 class="heading-1">Products</h1>
+                <div class="container" id="detail">
+                    <!--Inicio 1er producto-->
+                        <!---->
+                    <div class="container-product">
+                        <div class="row gx-0">
+                            <!-- Nombre del producto -->
+                            <div class="col-sm-4 col-md-3 col-6 mb-4" style="align-self: center;">
+                                <h2 class="heading-2">Product</h2>
+                                <div class="p-3 value">LEGO set</div>
+                            </div>
+                            <!-- Cantidad -->
+                            <div class="col-sm-4 col-md-3 col-6 mb-4" style="align-self: center;">
+                                <h2 class="heading-2">Quantity</h2>
+                                <div class="btn-group p-3 value mx-auto" role="group" aria-label="Default button group">
+                                    <button id="decrement" type="button" class="btn btn-outline-secondary px-3">-</button>
+                                    <input class="smaller-input text-center" type="text" id="counter" value="1" readonly>
+                                    <button id="increment" type="button" class="btn btn-outline-secondary px-3">+</button>
+                                </div>
+                            </div>
+                            <!-- Precio -->
+                            <div class="col-sm-2 col-md-2 col-6 mb-4" style="align-self: center;">
+                                <h2 class="heading-2">Price</h2>
+                                <div class="p-3 value">&dollar;0.00</div>
+                            </div>
+                            <!-- subtotal-->
+                            <div class="col-sm-2 col-md-2 col-6 mb-4" style="align-self: center;">
+                                <h2 class="heading-2">Subtotal</h2>
+                                <div class="p-3 value">&dollar;0.00</div>
+                            </div>
+                            <!--botón de basura-->
+                            <div class="col-sm-3 col-md-2 col-12 text-center" style="padding-top: 20px;">
+                                <button type="button" class="btn btn-success btn-lg" style="margin-bottom: 20px;">
+                                    <i class="fa-solid fa-trash"></i>
+                                </button>
+                            </div>
+
                         </div>
-                        <!-- Cantidad -->
-                        <div class="col-sm-4 col-md-3 col-6 mb-4" style="align-self: center;">
-                            <h2 class="heading-2">Quantity</h2>
-                            <div class="btn-group p-3 value mx-auto" role="group" aria-label="Default button group">
-                                <button id="decrement" type="button" class="btn btn-outline-secondary px-3">-</button>
-                                <input class="smaller-input text-center" type="text" id="counter" value="1" readonly>
-                                <button id="increment" type="button" class="btn btn-outline-secondary px-3">+</button>
+                    </div>
+                        <!---->
+                    <!--Fin 1er producto-->
+                    </div>
+                    <!---->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 text-center">
+                                <h5 class="mb-0">Items:</h5>
+                            </div>
+
+                            <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 text-center">
+                                <h5 class="mb-0">Total:</h5>
+                            </div>
+
+                            <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 text-center">
+                                <h5 class="mb-0" id="total-items">0</h5>
+                            </div>
+
+                            <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 text-center">
+                                <h5 class="mb-0" id="total-compra">&dollar;11</h5>
                             </div>
                         </div>
-                        <!-- Precio -->
-                        <div class="col-sm-2 col-md-2 col-6 mb-4" style="align-self: center;">
-                            <h2 class="heading-2">Price</h2>
-                            <div class="p-3 value">&dollar;0.00</div>
-                        </div>
-                        <!-- subtotal-->
-                        <div class="col-sm-2 col-md-2 col-6 mb-4" style="align-self: center;">
-                            <h2 class="heading-2">Subtotal</h2>
-                            <div class="p-3 value">&dollar;0.00</div>
-                        </div>
-                        <!--botón de basura-->
-                        <div class="col-sm-3 col-md-2 col-12 text-center" style="padding-top: 20px;">
-                            <button type="button" class="btn btn-success btn-lg" style="margin-bottom: 20px;">
-                                <i class="fa-solid fa-trash"></i>
-                            </button>
-                        </div>
-
-                    </div>
-                </div>
-                <!--Fin 1er producto-->
+                 </div>
             </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 text-center">
-                        <h5 class="mb-0">Items:</h5>
-                    </div>
-
-                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 text-center">
-                        <h5 class="mb-0">Total:</h5>
-                    </div>
-
-                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 text-center">
-                        <h5 class="mb-0" id="total-items">0</h5>
-                    </div>
-
-                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 text-center">
-                        <h5 class="mb-0" id="total-compra">&dollar;11</h5>
-                    </div>
-
-                              
-                </div>
-                          
-            </div>
+            <!---->
         </div>
         <!--Final de la lista de los productos-->
 
