--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>Contact Us | LEGO</title>
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="stylesheet" href="./css/main-style.css">
     <!-- Link boostrap -->
@@ -35,9 +35,9 @@
 
                 <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent" width="100">
                     <div class="d-flex ms-auto mt-2" role="search">
-                        <input id="searchInput" class="form-control me-2" type="search" placeholder="Search"
+                        <input disabled id="searchInput" class="form-control me-2" type="search" placeholder="Search"
                             aria-label="Search">
-                        <button id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
+                        <button disabled id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
                             <img class="mb-1" src="./icons/Search.svg" alt="Search-icon" width="36" height="30">
                         </button>
                     </div>
@@ -75,7 +75,7 @@
                     <a class="nav-link active nav-animation" href="preguntas-frecuentes.html">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active nav-animation" href="acerca-de.html">About Us</a>
+                    <a class="nav-link active nav-animation" href="about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active nav-animation" href="contacto.html">Contact Us</a>
