--- a/detalle-productos.html
+++ b/detalle-productos.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/main-style.css">
     <link rel="stylesheet" href="css/detalle-producto.css">
 
-    <title>Product Detail</title>
+    <title>Product Detail | LEGO</title>
 </head>
 
 <body>
@@ -32,9 +32,9 @@
 
                 <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent" width="100">
                     <div class="d-flex ms-auto mt-2" role="search">
-                        <input id="searchInput" class="form-control me-2" type="search" placeholder="Search"
+                        <input disabled id="searchInput" class="form-control me-2" type="search" placeholder="Search"
                             aria-label="Search">
-                        <button id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
+                        <button disabled id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
                             <img class="mb-1" src="./icons/Search.svg" alt="Search" width="36" height="30">
                         </button>
                     </div>
@@ -72,7 +72,7 @@
                     <a class="nav-link active nav-animation" href="preguntas-frecuentes.html">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active nav-animation" href="acerca-de.html">About Us</a>
+                    <a class="nav-link active nav-animation" href="about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active nav-animation" href="contacto.html">Contact Us</a>
