--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Homepage | LEGO</title>
   <link rel="stylesheet" href="css/main-style.css">
   <link rel="stylesheet" href="css/homepage.css">
+  <link rel="stylesheet" href="css/main-style.css">
   <!-- Link boostrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -16,67 +17,71 @@
 
 <body>
 
-  <header>
+   <!-- As a heading -->
+   <header>
     <nav class="navbar navbar-expand-lg bg-dark p-3">
-      <div class="container-fluid">
+        <div class="container-fluid">
 
-        <a class="navbar-brand" href="index.html">
-          <img src="./img/logo-lego.png" alt="Logo" width="70" height="70">
-        </a>
-        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent" width="100">
-          <div class="d-flex ms-auto mt-2" role="search">
-            <input id="searchInput" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
-              <img class="mb-1" src="./icons/Search.svg" alt="Search-icon" width="36" height="30">
+            <a class="navbar-brand" href="index.html">
+                <img src="./img/logo-lego.png" alt="Logo" width="70" height="70">
+            </a>
+            <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-          </div>
 
-          <ul class="navbar-nav ms-auto mb-2 mt-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">
-                <img class="btn-navbar" src="./icons/profile.svg" alt="Profile-icon">
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="cart.html">
-                <img class="btn-navbar" src="./icons/shopping-cart.svg" alt="shopping-cart">
-              </a>
-            </li>
-          </ul>
+            <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent" width="100">
+                <div class="d-flex ms-auto mt-2" role="search">
+                    <input disabled id="searchInput" class="form-control me-2" type="search" placeholder="Search"
+                        aria-label="Search">
+                    <button disabled id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
+                        <img class="mb-1" src="./icons/Search.svg" alt="Search" width="36" height="30">
+                    </button>
+                </div>
+
+                <ul class="navbar-nav ms-auto mb-2 mt-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <img class="btn-navbar" src="./icons/profile.svg" alt="Profile">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="cart.html">
+                            <img class="btn-navbar" src="./icons/shopping-cart.svg" alt="shopping-cart">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
         </div>
-
-      </div>
     </nav>
-  </header>
-  <!--Barra de navegación-->
-  <nav class="navbar navbar-expand-lg bg-warning p-3 fs-5">
+</header>
+
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg bg-warning p-3 fs-5">
     <div class="collapse navbar-collapse container-fluid justify-content-center">
-      <ul class="navbar-nav justify-content-evenly" style="width: 75%;">
-        <li class="nav-item">
-          <a class="nav-link active nav-animation" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active nav-animation" href="lista-productos.html">Shop</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active nav-animation" href="preguntas-frecuentes.html">Help</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active nav-animation" href="acerca-de.html">About Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active nav-animation" href="contacto.html">Contact Us</a>
-        </li>
-      </ul>
+        <ul class="navbar-nav justify-content-evenly" style="width: 75%;">
+            <li class="nav-item">
+                <a class="nav-link active nav-animation" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active nav-animation" href="lista-productos.html">Shop</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active nav-animation" href="preguntas-frecuentes.html">Help</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active nav-animation" href="about-us.html">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active nav-animation" href="contacto.html">Contact Us</a>
+            </li>
+        </ul>
 
     </div>
-  </nav>
+</nav>
 
   <!--Carousel-->
   <div id="carouselExampleIndicators" class="carousel slide">
