--- a/lista-productos.html
+++ b/lista-productos.html
@@ -9,7 +9,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main-style.css">
     <link rel="stylesheet" href="css/producto.css">
-    <title>Shop</title>
+    <title>Shop | LEGO</title>
 </head>
 
 <body>
@@ -70,7 +70,7 @@
                     <a class="nav-link active nav-animation" href="preguntas-frecuentes.html">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active nav-animation" href="acerca-de.html">About Us</a>
+                    <a class="nav-link active nav-animation" href="about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active nav-animation" href="contacto.html">Contact Us</a>
