--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <title>Common Questions</title>
+    <title>Common Questions | LEGO</title>
 </head>
 
 <body>
@@ -30,9 +30,9 @@
 
                 <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent" width="100">
                     <div class="d-flex ms-auto mt-2" role="search">
-                        <input id="searchInput" class="form-control me-2" type="search" placeholder="Search"
+                        <input disabled id="searchInput" class="form-control me-2" type="search" placeholder="Search"
                             aria-label="Search">
-                        <button id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
+                        <button disabled id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
                             <img class="mb-1" src="./icons/Search.svg" alt="Search-icon" width="36" height="30">
                         </button>
                     </div>
@@ -70,7 +70,7 @@
                     <a class="nav-link active nav-animation" href="preguntas-frecuentes.html">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active nav-animation" href="acerca-de.html">About Us</a>
+                    <a class="nav-link active nav-animation" href="about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active nav-animation" href="contacto.html">Contact Us</a>
